# checkgate

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.full  Dockerfile.server  LICENSE  README.md  docker-compose.full.yml  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-docker.yml  release-sdk-browser.yml  release-sdk-flutter.yml  release-sdk-nodejs.yml  release-sdk-react-native.yml  release-sdk-web.yml
core/: Cargo.toml
core/src/: evaluator.rs  hashing.rs  lib.rs
dashboard/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
dashboard/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  index.css  types.ts
dashboard/src/components/: Layout.tsx  RuleEditor.tsx  Sidebar.test.tsx  Sidebar.tsx  TopBar.tsx
dashboard/src/context/: AuthContext.tsx  EnvironmentContext.tsx  ProjectContext.tsx
dashboard/src/pages/: AuditLog.tsx  Dashboard.tsx  Environments.tsx  FlagEditor.tsx  FlagList.tsx  Impressions.tsx  Login.tsx  ProjectSettings.tsx  Projects.tsx  Scheduled.tsx  SdkHealth.tsx  Segments.tsx  Settings.tsx  Setup.tsx  Users.tsx  Webhooks.tsx
docker/: entrypoint-full.sh
docs/: api-reference.md  enterprise-setup.md  index.md  package.json  pnpm-lock.yaml  roadmap.md  self-hosting.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/guide/: architecture.md  concepts.md  getting-started.md  what-is-checkgate.md  what-is-launchgate.md
docs/sdks/: browser.md  flutter.md  nodejs.md  react-native.md  web.md
scripts/: bump-version.sh
sdks/browser/: Cargo.toml  package.json
sdks/browser/src/: lib.rs
sdks/flutter/: Cargo.toml  README.md
sdks/flutter/dart/: CHANGELOG.md  README.md  checkgate_bindings.dart  checkgate_flutter.dart  pubspec.yaml
sdks/flutter/dart/.dart_tool/: package_config.json  package_graph.json
sdks/flutter/dart/rust/: Cargo.toml
sdks/flutter/dart/rust/src/: lib.rs
sdks/flutter/dart/scripts/: bundle-rust.js
sdks/flutter/src/: lib.rs
sdks/nodejs/: Cargo.toml  README.md  index.d.ts  index.js  package.json
sdks/nodejs/src/: lib.rs
sdks/react-native/: Cargo.toml  Checkgate.podspec  README.md  index.js  package.json
sdks/react-native/android/: build.gradle
sdks/react-native/android/src/main/: AndroidManifest.xml  CMakeLists.txt
sdks/react-native/cpp/: checkgate_core.h  checkgate_jsi.cpp
sdks/react-native/rust-core/src/: evaluator.rs  lib.rs  store.rs
sdks/react-native/scripts/: bundle-rust.js
sdks/react-native/src/: lib.rs
sdks/web/: Cargo.toml  README.md  index.js  package.json
sdks/web/scripts/: bundle-rust.js
sdks/web/src/: lib.rs
server/: Cargo.toml
server/migrations/: 20260410000000_init.sql  20260410000001_sdk_keys.sql  20260410000002_users.sql  20260416000003_environments.sql  20260416000004_password_auth.sql  20260416000005_login_attempts.sql  20260418000006_impressions.sql  20260418000007_multivariate_flags.sql  20260418000008_editor_role.sql  20260418000009_projects.sql  20260418000010_sdk_keys_scoped.sql  20260418000011_project_members.sql  20260614000012_audit_log.sql  20260614000013_segments.sql  20260614000014_webhooks.sql  20260614000015_scheduled_changes.sql
server/src/: api.rs  auth.rs  main.rs  rate_limit.rs  scheduler.rs  state.rs  stream.rs  webhook_fire.rs
server/src/api/: audit.rs  environments.rs  flags.rs  health.rs  impressions.rs  keys.rs  projects.rs  scheduled.rs  segments.rs  session.rs  users.rs  webhooks.rs
verify-npm/: checkgate-rn.tgz  checkgate-web.tgz
verify-web-019/: checkgate-web-019.tgz
