[package]
name = "server"
version.workspace = true
edition = "2024"

[dependencies]
async-stream = "0.3.6"
axum = "0.8.8"
axum-extra = { version = "0.10", features = ["cookie-private"] }
constant_time_eq = "0.3"
cookie = { version = "0.18", features = ["private", "key-expansion"] }
futures-util = "0.3.32"
governor = "0.6"
redis = { version = "1.0.4", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
checkgate-core = { version = "0.1.0", path = "../core" }
rand = "0.8"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "time"] }
time = "0.3"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
