[package]
name = "react-native"
version = "0.1.0"
edition = "2021"

# Produces both a dynamic lib (Android .so) and a static lib (iOS .a)
[lib]
name = "checkgate_rn"
crate-type = ["cdylib", "staticlib"]

[dependencies]
checkgate-core = { version = "0.1.0", path = "./rust-core" }
serde_json = "1.0.149"
