[package]
name = "browser"
version.workspace = true
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.90"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
checkgate-core = { version = "0.1.0", path = "../../core" }
wasm-bindgen = "0.2.113"
